Change jacoco settings